--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@commitlint/cli": "17.7.1",
     "@release-it/conventional-changelog": "7.0.2",
     "bun-types": "latest",
     "conventional-changelog-conventionalcommits": "7.0.2",
