--- a/packages/commitlint-config/package.json
+++ b/packages/commitlint-config/package.json
@@ -4,6 +4,7 @@
   "version": "0.4.0",
   "license": "MIT",
   "author": "Yurii Rybak",
+  "description": "Shareable commitlint config enforcing conventional commit with workspace scopes support",
   "homepage": "https://github.com/Yurchishin/anylint/tree/master/packages/commitlint-config",
   "repository": {
     "type": "git",
@@ -16,7 +17,10 @@
     "commit-conventional",
     "config-conventional",
     "conventional",
-    "conventional-changelog"
+    "conventional-changelog",
+    "commitlint-workspace-scopes",
+    "commitlint-workspace",
+    "commitlint-monorepo"
   ],
   "engines": {
     "node": ">=16.0.0"
