--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -4,6 +4,7 @@
   "version": "0.4.1",
   "license": "MIT",
   "author": "Yurii Rybak",
+  "description": "Shareable ESLint config for TS/JS projects code consistency",
   "homepage": "https://github.com/Yurchishin/anylint/tree/master/packages/eslint-config",
   "repository": {
     "type": "git",
