--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "author": "Yurii Rybak",
+  "description": "Shareable Prettier config for code consistency",
   "homepage": "https://github.com/Yurchishin/anylint/tree/master/packages/prettier-config",
   "repository": {
     "type": "git",
