--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -10,8 +10,7 @@ jobs:
     name: Branch validation
     runs-on: macos-latest
     permissions:
-      packages: write
-      contents: write
+      contents: read
     steps:
       - uses: actions/checkout@v3
         name: Checkout
