--- a/package.json
+++ b/package.json
@@ -24,6 +24,5 @@
     "release-it": "16.2.0",
     "typescript": "5.2.2"
   },
-  "prettier": "@anylint/prettier-config",
-  "version": "0.1.3"
+  "prettier": "@anylint/prettier-config"
 }
